--- a/assets/css/centralTreinamentos.css
+++ b/assets/css/centralTreinamentos.css
@@ -19,7 +19,7 @@ section {
 .CursosList img {
     height: 250px;
     width: 100%;
-    object-fit: cover;
+    object-fit: fill;
     margin-bottom: 10px;
 }
 
