--- a/assets/css/HeaderBaseFormulario.css
+++ b/assets/css/HeaderBaseFormulario.css
@@ -49,6 +49,7 @@ form {
 
 
 #painelformulario {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     margin-left: 50px;
     margin-right: 40px;
     color: rgb(255, 255, 255);
