--- a/assets/css/HeaderBaseTreinamentos.css
+++ b/assets/css/HeaderBaseTreinamentos.css
@@ -27,55 +27,72 @@ ul{
 }
 
 .menu li a {
-    color: #EC0E73;
+    text-shadow: 1px 1px 2px black;
+    border: white;
+    color: white;
     text-decoration: none;
     padding: 5px 10px;
     display: block;
 }
 
 .menu li ul {
-    
     position: absolute;
-    top: 25px;
     left: 0;
-    background-color: #fff;
+    background-color: #001C54;
     display: none;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .menu li:hover ul,
 .menu li.over ul {
+    text-shadow: 1px 1px 2px black;
+    margin: 0;
+    padding: 0;
     display: block;
 }
 
 .menu li ul li {
-    border: 1px solid #c0c0c0;
+    border: 1px solid white;
+    margin-left: 0;
     display: block;
     width: 150px;
 }
 
-h2, h3, p{
+h2{
     text-align: center;
+    box-shadow: 2px 2px 4px black;
+    text-shadow: 2px 2px 4px black;
+    border:  2px solid black;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 35px;
+    background-color: #6B3FA0;
+    
+}
+h3, p{
+    text-shadow: 2px 2px 4px black;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .videoTreinamento{
     display: block;
     margin: 0 auto;
-    width: 90%;
-    height: 360px;
-    max-width: 640px;
-    max-height: 360px;    
+    width: 780px;
+    height: 440px;
+    max-width: 1024px;
+    max-height: 768px;
 }
 
 .botaovideo{
+    border:  2px solid black;
+    text-shadow: 1px 1px 2px black;
     padding: 5px 5px;
-    background-color: #EC0E73;
+    background-color: #FF006F;
     color: #ffffff;
-    text-decoration: none;
-    border: none;
-    border-radius: 5px;
+    border-radius: 15px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 10px;
     text-align: center;
@@ -85,6 +102,11 @@ h2, h3, p{
 
 }
 
+.botaovideo:hover{
+    transition: background, color 0.4s;
+    background: black;
+    color: white;
+}
 header h2{
     color:#EC0E73;
     padding-left: 20px;
