--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,21 +1,32 @@
 @import url('HeaderBaseIndexCentral.css');
 
-h2, h4{
-   
+h2 {
     text-align: center;
+    box-shadow: 2px 2px 4px black;
+    text-shadow: 2px 2px 4px black;
+    border:  2px solid black;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 35px;
+    background-color: #6B3FA0;
+} 
+
+h4{
+    text-shadow: 2px 2px 4px black;
+    text-align: center;
+    line-height: 1;
+    margin-top: 30px;
+    margin-bottom: 15px;
 }
 
 .video-youtube {    
-    width: 80%;
-    /* width: 70%;*/
+    width: 100%;
     max-width: 800px;
-    height: 415px;
+    height: 450px;
     display: block;
     margin-left: 5%;
     margin: 0 auto;
 }
-
-
 
 @media screen and (max-width: 700px){
     iframe{
