--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/assets/img/Fundo1.png");
+  background-image: url("../assets/img/Fundo1.png");
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
