--- a/assets/css/HeaderBase.css
+++ b/assets/css/HeaderBase.css
@@ -1,4 +1,6 @@
-
+* {
+    font-family: 'BW Seido Raw', sans-serif !important;
+}
 @font-face {
     font-family: 'BW Seido Raw';
     src: url('fonts/BWSeidoRaw-Regular.woff') format('woff');
@@ -19,7 +21,7 @@
 }
 
 :root{
-    --cor-de-fundo: #001C54;
+    --cor-de-fundo: #000C84;
     --cor-de-fonte: #FFFFFF;
     --cor-do-titulo: #FF006F;
     --cor-branca: #FFFFFF;
@@ -48,8 +50,6 @@ body{
 }
 
 .menu_pagina{
-    background: #ffffff;
-    background: linear-gradient(90deg,rgba(255, 255, 255, 1) 20%, rgba(107, 63, 160, 1) 32%, rgba(107, 63, 160, 1) 80%, rgba(0, 0, 0, 1) 100%);
     height: 85px;
     display: flex;
     align-items: center;
