--- a/assets/css/HeaderBaseIndexCentral.css
+++ b/assets/css/HeaderBaseIndexCentral.css
@@ -1,5 +1,8 @@
 @import url('HeaderBase.css');
 
+*{
+font-family: 'BW Seido Raw', sans-serif;
+}
 nav{
     width: 100%;
     height: 125px;
@@ -63,4 +66,5 @@ nav ul button:hover{
 
 .logo{
     margin: 0;
+    width: 100%;
 }
