--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,118 +1,43 @@
-.sidebar {
-  box-shadow: 1px 1px 10px black;
-  width: 70px;
-  transition: width 0.3s ease;
-  overflow-x: hidden;
-  overflow-y: auto;
-  height: 100vh;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 1) 20%,
-    rgba(107, 63, 160, 1) 50%,
-    rgba(107, 63, 160, 1) 70%,
-    rgba(0, 0, 0, 1) 100%
-  );
-  scrollbar-width: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-}
-
-.sidebar::-webkit-scrollbar {
-  display: none;
-}
-
-a,
-a:visited,
-a:hover,
-a:active {
-  text-decoration: none !important;
-  color: inherit !important;
-}
-
-.btn-sidebar {
-  color: inherit;
-  text-decoration: none;
-  display: block;
+logo {
   width: 100%;
-  color: transparent;
-  background-color: #ff006f;
-  border: 2px solid black;
-  border-radius: 15px;
-  padding: 10px 15px;
-  font-size: 16px;
-  margin-bottom: 10px;
-  transition: all 0.3s ease;
-  white-space: nowrap;
-  overflow: hidden;
-  text-decoration: none;
 }
 
-.sidebar:hover .btn-sidebar,
-.sidebar.sidebar-expanded .btn-sidebar {
-  color: white;
-  overflow: visible;
-  white-space: normal;
-  text-shadow: 1px 1px 2px black;
-  word-break: break-word;
-  text-decoration: none;
+.container {
+  display: flex;
+  flex-direction: row;
+  margin: 20px;
+}
+.menu_buttons a {
+  text-shadow: 1px 1px 1px black;
+  border-radius: 8px;
+  border: solid black 1px;
+  color: white !important;
+  display: flex;
+  flex-direction: row wrap;
+  gap: 10px;
 }
 
-.btn-sidebar:hover {
-
-  background-color: #001c54;
+.BtnMenu {
+  background-color: #ec0e73;
+  padding: 5px 25px;
   cursor: pointer;
-  text-decoration: none;
-}
-
-.logo-img {
-  width: 100%;
-  max-width: 50px;
-  transition: max-width 0.3s ease;
-}
-
-@media (min-width: 768px) {
-  .sidebar:hover {
-    width: 220px;
-  }
-
-  .sidebar:hover .logo-img {
-    max-width: 300px;
-  }
-}
-
-@media (max-width: 767px) {
-  .sidebar-expanded {
-    width: 220px !important;
-  }
-
-  .sidebar-expanded .logo-img {
-    max-width: 300px;
-  }
-
-  main {
-    margin-left: 70px;
-  }
-}
-
-.toggle-sidebar-btn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #ff006f;
-  color: white;
+  font-weight: bold;
+  border-radius: 4px;
+  text-align: center;
   border: none;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  font-size: 24px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-  z-index: 10000;
-  transition: background-color 0.3s ease;
 }
 
-.toggle-sidebar-btn:hover {
-  background-color: #6b3fa0;
-  cursor: pointer;
+.menu_video {
+  flex: 1;
+  background: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 1px 2px 2px black;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu_video img {
+  height: 60px;
 }
