--- a/assets/css/Area_videos.css
+++ b/assets/css/Area_videos.css
@@ -16,7 +16,8 @@ body {
 }
 .video-section iframe {
     width: 100%;
-    height: 360px;
+    height: 75%;
+    min-height: 360px;
     border-radius: 8px;
     border: none;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -27,7 +28,7 @@ body {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    max-height: 490px;
+    max-height: 480px;
     overflow-y: auto;
 }
 .lessons-section h2 {
